--- a/b2/index.html
+++ b/b2/index.html
@@ -366,8 +366,8 @@ right:0; bottom:0; }
             <ul class="pub">
                 <li ><a href=""><img src="image/main/pub10.png" alt=""></a></li>
                 <li><a href=""><img src="image/main/pub20.png" alt=""></a></li>
-                <li><a href=""><img src="image/main/pub30.png" alt=""></a></li>
-                <li><a href=""><img src="image/main/pub40.png" alt=""></a></li>
+                <li><a href=""><img src="image/main/pub30.PNG" alt=""></a></li>
+                <li><a href=""><img src="image/main/pub40.PNG" alt=""></a></li>
 
             </ul>
             
@@ -376,7 +376,7 @@ right:0; bottom:0; }
                 <ul class="lst sq6">
                     
                     <li class="bx sq23">
-                        <div class="img_box"><img src="image/main/box11.PNG" alt="롤오버이미지"></div>
+                        <div class="img_box"><img src="image/main/box11.png" alt="롤오버이미지"></div>
                         <div class="tit_box">
                             <h3 class="tit">소식</h3>
                             <p class="com">문재인정부 2년반, 이렇게 달라졌습니다.</p>
@@ -384,7 +384,7 @@ right:0; bottom:0; }
                         </div>     
                     </li>
                     <li class="bx sq23">
-                        <div class="img_box"><img src="image/main/box22.PNG" alt="롤오버이미지"></div>
+                        <div class="img_box"><img src="image/main/box22.png" alt="롤오버이미지"></div>
                         <div class="tit_box">
                             <h3 class="tit">소식</h3>
                             <p class="com">한-아세안 특별정상회의</p>
@@ -392,7 +392,7 @@ right:0; bottom:0; }
                         </div>     
                     </li>
                     <li class="bx sq23">
-                        <div class="img_box"><img src="image/main/box33.PNG" alt="롤오버이미지"></div>
+                        <div class="img_box"><img src="image/main/box33.png" alt="롤오버이미지"></div>
                         <div class="tit_box">
                             <h3 class="tit">소식</h3>
                             <p class="com">MSIT WEBZINE</p>
@@ -400,7 +400,7 @@ right:0; bottom:0; }
                         </div>     
                     </li>
                     <li class="bx sq23">
-                        <div class="img_box"><img src="image/main/box44.PNG" alt="롤오버이미지"></div>
+                        <div class="img_box"><img src="image/main/box44.png" alt="롤오버이미지"></div>
                         <div class="tit_box">
                             <h3 class="tit">소식</h3>
                             <p class="com">최신정보를 알려드립니다.</p>
