--- a/b12/index.html
+++ b/b12/index.html
@@ -21,7 +21,8 @@
         
     * { margin: 0; padding: 0; }
     body, html { width: 100%; height: 100%; font-family: 'Playfair Display', serif;
-font-family: 'Bree Serif', serif; font-weight:400; overflow-x: hidden;position: relative;background-color:whitesmoke;}
+font-family: 'Bree Serif', serif; font-weight:400; overflow-x: hidden;position: relative;
+background-color:whitesmoke;background-repeat: no-repeat;}
     ul { list-style: none; }    
     a { text-decoration:none;display: block; }  
     img {width: 100%;display: block;}
@@ -145,11 +146,11 @@ font-family: 'Bree Serif', serif; font-weight:400; overflow-x: hidden;position: 
 #coming_p_01 {font-size: 25px;color: white; background: #393c41;}
 
 .event_wrap {width: 100%;}
-.event_wrap img {box-shadow: 1px 1px 5px #393c41;}
-.event_wrap li{width: 205px;height: 300px;float: left;box-shadow: 2px px 5px #393c41;margin-left: 1px;}   
+.event_wrap img {box-shadow: 1px 1px 5px #393c41;width: 50%;}
+.event_wrap li{width: 50%;height: 300px;float: left;box-shadow: 2px px 5px #393c41;background-repeat: no-repeat;}   
 #event_p_01 {font-size: 25px;background: #393c41;color: white;}   
-.even_01 {background:url(image/main/event_01.png)}
-.even_02 {background:url(image/main/event_002.png)}
+.even_01 {background:url(image/main/event_01.png); }
+.even_02 {background:url(image/main/event_002.png); }
 #eve_01 {font-size: 20px;}
 #eve_02 {font-size: 20px;}
 .even_01 a p{box-shadow: 2px 1px 5px #393c41;margin-top: 150px;width: 100px;height: 30px;color: white;background-color:#38b5c7 ;
