--- a/b12/member.html
+++ b/b12/member.html
@@ -226,7 +226,7 @@ button {
 
                         <form action="/action_page.php" method="post">
                             <div class="imgcontainer">
-                                <img src="/image/member/member_02.PNG" alt="Avatar" class="avatar"
+                                <img src="image/member/member_02.PNG" alt="Avatar" class="avatar"
                                 style="white-space: 80%;height: 375px;left: 50% auto;right: 50% auto;">
                             </div>
                             
@@ -250,7 +250,7 @@ button {
             <ul class="member_02">
                     <form action="/action_page.php" style="border:1px solid #ccc">
                         <div class="container">
-                            <img src="/image/member/member_03.PNG" alt="">
+                            <img src="image/member/member_03.PNG" alt="">
                                 <label for="name"><b>name</b></label>
                                 <input type="text" placeholder="Enter name" name="email" required>
                                 <label for="phone"><b>phone</b></label>
