--- a/b2/menu1-2.html
+++ b/b2/menu1-2.html
@@ -8,7 +8,9 @@
     <link rel="apple-touch-icon-precomposed" href="image/pavi180x180.png">
     <link rel="stylesheet" href="main.css">
     <script src="http://code.jquery.com/jquery.js"></script>
+<style>
 
+</style>
 <div class="wrap">
    
     <header class="hd">
