--- a/ban03/index.html
+++ b/ban03/index.html
@@ -56,9 +56,9 @@
         <a href="index.html" class="logo"><img src="image/main/logo.png" alt=""></a>
         <nav id="tnb">
                 <ul class="menu">
-                    <li><a href="">상단메뉴1</a></li>
-                    <li><a href="">상단메뉴2</a></li>
-                    <li><a href="">상단메뉴3</a></li>
+                    <li><a href="">로그인</a></li>
+                    <li><a href="">회원가입</a></li>
+                    <li><a href="http://www.djjunggu.go.kr/html/kr/">중구청 홈페이지</a></li>
                 </ul>
             </nav>
         <nav id="gnb">
@@ -75,16 +75,12 @@
             <div class="page_wrap">
                 <h2 class="page_tit">우리동네 핫 이슈</h2>
                 <ul class="lst">
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+              
                 </ul>
             </div>
         </div>
@@ -92,33 +88,23 @@
             <div class="page_wrap">
                 <h2 class="page_tit">공지사항</h2>
                 <ul class="lst">
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
                 </ul>
             </div>
         </div>
         <div class="page" id="page3">
             <div class="page_wrap">
-                <h2 class="page_tit">세 번째 페이지</h2>
+                <h2 class="page_tit">우리동 현황</h2>
                 <ul class="lst">
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                    <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
+                    <li><a href=""><img src="https://placehold.it/300x300/333" alt=""></a></li>
                 </ul>
             </div>
         </div>
