--- a/ban03/menu_01.html
+++ b/ban03/menu_01.html
@@ -59,7 +59,7 @@
                 <ul class="menu">
                     <li><a href="">로그인</a></li>
                     <li><a href="">회원가입</a></li>
-                    <li><a href="https://www.djjunggu.go.kr"><img src="image/f_logo.gif" alt=""></a></li>
+                    <li><a href="https://www.djjunggu.go.kr">중구청 홈페이지</a></li>
                 </ul>
             </nav>
         <nav id="gnb">
@@ -74,7 +74,7 @@
     <section class="con">
         <div class="page" id="page1">
             <div class="page_wrap">
-                <h2 class="page_tit">우리동네 핫 이슈</h2>
+                <h2 class="page_tit">우리동 현황</h2>
                 <ul class="lst">
                     <li><a href=""><img src="image/menu_01/menu1_04.PNG" alt=""></a></li>
                     <li><a href=""><img src="image/menu_01/menu1_01.PNG" alt=""></a></li>
