--- a/ban01/index.html
+++ b/ban01/index.html
@@ -38,7 +38,7 @@
     position:absolute; top:0.25rem; left:1rem; color:#333; }
     .lst { display:block; width: 48px; height: 48px; line-height:48px; text-align:center; 
     position:absolute; top:0.25rem; right:1rem; color:#333; }  
-    .logo { display:block; width: 120px; margin:0 auto; margin-top:1rem; } 
+    .logo { display:block; width: 120px;height: 30px; margin:0 auto; margin-top:1rem; } 
     .hd.mo .logo { margin-top:1rem; }
     #tnb { float:right; margin-right:calc(50vw - 480px); }
     #gnb { clear:both; width: 960px; margin:0 auto; margin-top:20px; } 
@@ -99,8 +99,8 @@
     .desk a > img{width: 150px;height: 40px;}
     .mo a > img {width: 120px;height: 35px;padding-top: 5px;}
     .item_lst img{width: 300px;height: 300px;}
-    .main_pop_04 {width: 300px;height: 270px;background-color: #f25953;text-align: center;
-    }
+    .main_pop_04 {width: 300px;height: 270px;background-color: #f25953;text-align: center;}
+    .main_pop_03 {width: 300px;height: 270px;background-color: #067759;text-align: center;}
     
    
         /* 텍스트 애니메이션 */
@@ -198,17 +198,22 @@
         <ul class="item_lst">
             <li>
                 <a href="">
-                    <img src="image/main_02.jpg" class="item_pic" alt="이미지1">
+                    <img src="image/main_02.png" class="item_pic" alt="이미지1">
                     <h2 class="item_tit">포토앨범</h2>
                     <p class="item_com">2019 포트폴리오 경진 대회</p>
                 </a>
             </li>
             <li>
-                <a href="">
-                    <img src="image/main_03.jpg" class="item_pic" alt="이미지2">
-                    <h2 class="item_tit">학교소개</h2>
-                    <div id="text">오고싶은학교</div>
-                    <p class="item_com">동산고등학교를 소개합니다.</p>
+                <a href="" class="main_pop_03">
+                    <h1 style="padding-top: 5px;color: #fff;">학교 교육 목표!</h1>
+                    <hr style="color: #fff;">
+                    <p style="font-size: 30px;line-height: 2em;font-weight: bold;color: #fff;margin-top:px;"> 기본에 충실한 <br>
+                   창의성을 
+                   <br> 기르는  교육<br>
+                   <br>
+                    <h2 class="item_tit" style="background: #fff;margin-top: 15px;">학교소개</h2>
+                    <p class="item_com">오고싶은학교</p>
+                
                 </a>
             </li>
             <li>
