--- a/ban02/tvshow.html
+++ b/ban02/tvshow.html
@@ -41,6 +41,18 @@
 </style>
 </head>
 
+
+
+
+
+
+
+
+
+
+
+
+
 <body>
         <aside id="left">
             <a href="index.html" class="logo">
@@ -59,10 +71,8 @@
         <section class="con">
                 <div class="page" id="page1">
                     <div class="page_wrap">
-                        <h2 class="page_tit">TV SHOW</h2>
+                        <h2 class="page_tit">첫 번째 페이지</h2>
                         <ul class="lst">
-                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
                             <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
                             <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
                             <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
@@ -76,7 +86,23 @@
                         </ul>
                     </div>
                 </div>
-        
+                <div class="page" id="page2">
+                    <div class="page_wrap">
+                        <h2 class="page_tit">두 번째 페이지</h2>
+                        <ul class="lst">
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
 
 
 
