--- a/ban02/movies.html
+++ b/ban02/movies.html
@@ -40,6 +40,19 @@
     .lst li a img { display:block; max-width:100%; height:auto; }
 </style>
 </head>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <body>
         <aside id="left">
             <a href="index.html" class="logo">
@@ -58,10 +71,8 @@
         <section class="con">
                 <div class="page" id="page1">
                     <div class="page_wrap">
-                        <h2 class="page_tit">MOVIE</h2>
+                        <h2 class="page_tit">첫 번째 페이지</h2>
                         <ul class="lst">
-                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
-                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
                             <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
                             <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
                             <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
@@ -75,7 +86,23 @@
                         </ul>
                     </div>
                 </div>
-             
+                <div class="page" id="page2">
+                    <div class="page_wrap">
+                        <h2 class="page_tit">두 번째 페이지</h2>
+                        <ul class="lst">
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                            <li><a href=""><img src="https://placehold.it/300x200/333" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
 
 
 
