--- a/ban5/index.html
+++ b/ban5/index.html
@@ -131,13 +131,13 @@
 <input type="checkbox" id="menu_call" class="ck">    
 <header class="mo hd">
     <a href="" class="home"><i class="fas fa-home f30"></i></a>
-    <a href="index.html" class="logo"><img src="image/main/logo.png" alt=""></a> 
+    <a href="index.html" class="logo"><img src="image/main/logo2.png" alt=""></a> 
     <label for="menu_call" class="lst">
         <i class="fas fa-bars f30"></i><i class="fas fa-times f30"></i>
     </label>
 </header>
 <header class="desk hd">
-    <a href="index.html" class="logo"><img src="image/main/logo.png" alt=""></a> 
+    <a href="index.html" class="logo"><img src="image/main/logo2.png" alt=""></a> 
     <nav id="tnb">
         <ul class="menu">
             <li><a href="">로그인</a></li>
