--- a/ban5/index.html
+++ b/ban5/index.html
@@ -19,7 +19,7 @@
     <!-- 아이콘 폰트 링크 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <script src="https://code.jquery.com/jquery-latest.js"></script>
-    <title>중구보건소</title>
+    <title>대전중구보건소</title>
     <style>
     * { margin: 0; padding: 0; }
     body, html { width: 100%; font-size:14px; font-family:'Noto Sans KR', sans-serif;  }
