--- a/ban04/index.html
+++ b/ban04/index.html
@@ -10,6 +10,7 @@
 <link rel="apple-touch-icon-precomposed" href="images/icon/flat-design-touch.png">
 <script src="js/jquery.min.js"></script>
 <script src="js/flat.min.js"></script>
+
 </head>
 <body>
 	<div id="wrap">
@@ -26,7 +27,7 @@
 			</h1>
 			<nav class="nav">
 				<ul class="gnb">
-					<li><a href="index.html">정보공개</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+					<li><a href="menu_01.html">정보공개</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
 					<li><a href="introudce.html">새소식</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
 					<li><a href="gallery.html">정책정보</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
 					<li><a href="board.html">통계청소개</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
@@ -35,6 +36,12 @@
 			<span class="menu_toggle_btn">전체 메뉴 토글 버튼</span>
 		</header>
 		<section class="slider_section">
+			<li class="gal">
+
+		
+            
+			</li>
+			<div class=""></div>
 			<span class="prev_btn">이전 버튼</span><span class="next_btn">다음 버튼</span>
 		</section>
 		<section class="latest_post_section">
@@ -118,27 +125,27 @@
 		</section>
 		<section class="social_section">
 			<ul class="social_list">
-				<li><a href=""><img src="images/s_images/social_icon_01.png" alt=""></a></li>
-				<li><a href=""><img src="images/s_images/social_icon_02.png" alt=""></a></li>
-				<li><a href=""><img src="image/main/insta2.png" alt=""></a></li>
+				<li><a href="https://twitter.com/kostatin" target="_blank"><img src="images/s_images/social_icon_01.png" alt=""></a></li>
+				<li><a href="https://www.facebook.com/StatisticsKorea" target="_blank"><img src="images/s_images/social_icon_02.png" alt=""></a></li>
+				<li><a href="https://twitter.com/kostatin" target="_blank"><img src="image/main/insta2.png" alt=""></a></li>
 			</ul>
 		</section>
-		<footer class="footer">
-			<style>
-				.ft {text-align: center;font-size: 20px;background:#f2f2f3;height: 30px;line-height:30px;}
-				.ft a {color: #333;}
-				.ft a::after {content: "|";}
-				</style>
-			<nav class="ft"><a href=""></a>
-			<a href="">이용안내</a>
-			<a href="">개인정보처리방침</a>
-			<a href="">이메일무단수집거부</a>
-			<a href="">저작권정책</a>
-			<a href="">RSS</a>
-			<a href="">홈페이지개선의견</a>
-			<a href="">찾아오시는길</a>	
-		</nav>
-			<p>copyright&copy; 2014.flat design blog all rights reserved.</p>
+		<footer class="footer">	
+		<ul>
+			<li>
+				<a href="">이용안내</a>
+				<a href="">개인정보처리방침</a>
+				<a href="">이메일무단수집거부</a>
+				<a href="">저작권정책</a>
+				<a href="">RSS</a>
+				<a href="">홈페이지개선의견</a>
+				<a href="">찾아오시는길</a>	
+			</li>
+			<li>
+			<address>[35208] 대전광역시 서구 청사로 189(둔산동, 정부대전청사 3동) FAX 042-481-2461 /	
+			<span>통계청콜센터 02-2012-9114 / 국번없이 110</span><br>
+				&copy; Statistics Korea. All rights reserved since 1996.</address></li>
+			
 		</footer>
 	</div>
 </body>
