--- a/ban6/index.html
+++ b/ban6/index.html
@@ -5,27 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="/connect/bootstrap.min.js"></script>
-    <script src="/connect/docs.min.js"></script>
-    <link href="/connect/carousel.css" rel="stylesheet">
+    <script src="connect/bootstrap.min.js"></script>
+    <script src="connect/docs.min.js"></script>
+    <link href="connect/carousel.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/connect/ie10-viewport-bug-workaround.js"></script>
+    <script src="connect/ie10-viewport-bug-workaround.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link href="" rel="stylesheet">
     <title>Dole 코리아</title>
     <style>
     a{text-decoration: none;}
     ul{list-style: none;}
-    .container {background: yellow;}
-      .login{float: right;margin-top: 20px;}
+  
+      .login{float: right;margin-top: 20px;margin-right: 20px;}
       .login li {float: left;padding-left: 15px;background: yellow;}
     .navbar-brand > a > img{width: 100px;height: 50px;}
-.carousel-inner{height: 700px;}
-.logo img{width: 150px;height: 60px;}
+.carousel-inner{height: auto;}
+.logo img{width: 150px;height: auto;}
 .dropdown li {color: #333;}
 #navbar > ul > li > a {font-size: 19px;color: #dddee4;}
-.img-circle {width: 300px;height: 300px;}
-.col-md-5 img{width: 500px;height: 500px;}
+.img-circle {width: 300px;height: auto;}
+.col-md-5 img{width: 500px;height: auto;}
     </style>
 </head>
 <body>
@@ -133,7 +133,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="/image/main/slide_01.png" alt="First slide">
+          <img class="first-slide" src="image/main/slide_01.png" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
             
@@ -258,6 +258,7 @@
 
       <style>
       footer {background-color: #1aa4de;height: 100px;}
+    
       footer li {float: left;}
       </style>
       <!-- FOOTER -->
