--- a/b2/menu1-1.html
+++ b/b2/menu1-1.html
@@ -61,6 +61,8 @@ input:checked{width: 30px;height: 30px;}
 
 .name_ck #text3{width: 200px;height: 50px;}
 #label3{font-size: 20px;}
+.fnb {margin-left: 270px;}
+.fnb li{float: left;}
 </style>
 </head>
 
