--- a/b2/menu1-1.html
+++ b/b2/menu1-1.html
@@ -126,7 +126,7 @@ input:checked{width: 30px;height: 30px;}
 
                 <content class="min">
                         <h1>신청서 작성</h1>
-                    <textarea name="" id="area1" cols="205" rows="50" >
+                    <textarea name="" id="area1" cols="205" rows="50" style="margin-left:20px" >
     1. 개인정보의 수집 및 이용 목적(개인정보보호법 제15조)
     
     국민신문고는 관계법령 등에서 정하는 소관 업무의 수행을 위하여 다음과 같이 개인정보를 수집 및 이용합니다. 수집된 개인정보는 정해진 목적 이외의 용도로는 이용되지 않으며 수집
@@ -193,7 +193,7 @@ input:checked{width: 30px;height: 30px;}
                             </div>
                         </div>
                             <div class="nt_wrap2">
-                                <textarea name="" id="area2" cols="205" rows="20" >
+                                <textarea name="" id="area2" cols="205" rows="20" style="margin-left:20px"  >
     - MVNO : SK텔링크, 한국케이블텔레콤(T플러스,KCT), 스마텔, ㈜유니컴즈(모빙), 큰사람, 한국정보통신, ㈜CJ헬로비전(헬로모바일), KT파워켈, 앤알커뮤니케이션(앤텔레콤),
                                         
     세종(온세)텔레콤, ㈜위너스텔, ㈜씨엔커뮤니케이션, ACN 코리아(유한), ㈜KTIS, KT텔레캅, ㈜미디어로그, 유모비(LG멀티미디어인터넷), 인스코비(프리티), 머천드코리아,
