--- a/ban6/index.html
+++ b/ban6/index.html
@@ -18,13 +18,14 @@
     ul{list-style: none;}
   
       .login{float: right;margin-top: 20px;margin-right: 20px;}
-      .login li {float: left;padding-left: 15px;background: yellow;}
+      .login li {float: left;padding-left: 15px;}
+      .login li a {color: #fff;}
     .navbar-brand > a > img{width: 100px;height: 50px;}
 .carousel-inner{height: auto;}
 .logo img{width: 150px;height: auto;}
 .dropdown li {color: #333;}
 #navbar > ul > li > a {font-size: 19px;color: #dddee4;}
-.img-circle {width: 300px;height: auto;}
+.img-circle {width: 300px;height: 300px;}
 .col-md-5 img{width: 500px;height: auto;}
     </style>
 </head>
