--- a/ban7/index.html
+++ b/ban7/index.html
@@ -109,7 +109,7 @@ button, input { border:0; outline:0; background-color:transparent; }
 figure {margin-left: 0;}
 	#vis { width:100vw; height:600px; margin:15px auto;
 	 overflow:hidden; clear:both; }
-	.img_box { width:100vw; height:600px; }
+	.img_box { width:100vw; height:auto; }
 	#vis li { display:block; float:left; position:relative; }
     #vis a { display:block; }
 	#vis img { display:block; width:100vw; height:600px; }
